# atmos-arena

./: .gitignore  README.md  chem_forecast_baselines.json  count_flops.py  download_cams.sh  download_eac4.sh  env.yml  plot.ipynb  plot_psd.py  predict_downscaling.py  pyproject.toml  setup.py  visualize_downscaling.py  visualize_s2s.py
atmos_arena/: climax_arch.py  climax_embedding.py  cnn_blocks.py  stormer_arch.py  unet_arch.py
atmos_arena/air_composition_forecasting/: dataset.py  direct_datamodule.py  direct_module.py  train.py
atmos_arena/atmos_utils/: data_utils.py  lr_scheduler.py  metrics.py  pos_embed.py
atmos_arena/chemistry_downscaling/: datamodule.py  dataset.py  module.py  normalization_constants.py  train.py
atmos_arena/climate_projection/: climax_climatebench_arch.py  datamodule.py  module.py  stormer_climatebench_arch.py  (+1 more)
configs/: air_composition_forecast_climax.yaml  air_composition_forecast_unet.yaml  chem_downscaling_climax.yaml  chem_downscaling_stormer.yaml  chem_downscaling_unet.yaml  climate_projection_stormer.yaml  downscaling_climax.yaml  downscaling_stormer.yaml  downscaling_unet.yaml  extreme_detection_climax.yaml  extreme_detection_stormer.yaml  fingerprint_climax.yaml  fingerprint_stormer.yaml  forecasting_climax.yaml  infilling_climax.yaml  infilling_stormer.yaml  infilling_unet.yaml  monthly_infilling_climax.yaml  monthly_infilling_stormer.yaml  monthly_infilling_unet.yaml  s2s_climax.yaml  s2s_climax_mint3_test_advit.yaml  s2s_climax_mint3_test_prateik.yaml  s2s_stormer.yaml  s2s_unet.yaml  s2s_unet_mint3_test_prateik.yaml
(+82 files in other folders)
