[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "atmos_arena"
version = "0.0.1"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/tung-nd/atmos-arena"

[tool.setuptools.packages.find]
where = ["atmos_arena"]